...
                }
                
                if viewModel.state == .loading {
                    LoadingView()
                }
            }
            .navigationTitle("URL Shortener")
            #if os(iOS)
            .navigationBarTitleDisplayMode(.large)
            #endif
            .alert(
                "Erro",
                isPresented: .constant(isErrorState),
...
